# slog-global

./: Cargo.toml
src/: lib.rs  log_redirect.rs
